--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>Three.js Project</title>
+  <title>Solar Simulator</title>
   <style>
     body {
       margin: 0;
       overflow: hidden;
     }
-
     canvas {
       display: block;
     }
